--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: go
 go:
-- 1.7
+  - 1.7
 install:
-- curl https://glide.sh/get | sh
-- glide install
+  - wget "https://github.com/Masterminds/glide/releases/download/0.12.3/glide-0.12.3-linux-amd64.tar.gz"
+  - mkdir -p $HOME/bin
+  - tar -vxz -C $HOME/bin --strip=1 -f glide-0.12.3-linux-amd64.tar.gz
+  - export PATH="$HOME/bin:$PATH"
+  - glide install
 script:
-- go test
+  - go test
