--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: go
 go:
-  - 1.7
+  - "1.10"
 install:
-  - wget "https://github.com/Masterminds/glide/releases/download/v0.12.3/glide-v0.12.3-linux-amd64.tar.gz"
-  - mkdir -p $HOME/bin
-  - tar -vxz -C $HOME/bin --strip=1 -f glide-v0.12.3-linux-amd64.tar.gz
-  - export PATH="$HOME/bin:$PATH"
-  - glide install -v
+  - go get -u golang.org/x/vgo
 script:
-  - go test
+  - vgo test -race -cover -count=5 ./...
+  - cd v3 && vgo test -race -cover -count=5 ./...
