--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: go
 go:
-  - "1.10"
+  - "1.11"
 install:
-  - go get -u golang.org/x/vgo
+  - go get golang.org/x/vgo
+  - go get golang.org/x/tools/cmd/...
 script:
-  - vgo test -race -cover -count=5 ./...
-  - cd v3 && vgo test -race -cover -count=5 ./...
+  - GO111MODULE=on go test -race -cover -count=5 ./...
+  - cd v3 && GO111MODULE=on go test -race -cover -count=5 ./...
