--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ install:
 script:
   - GO111MODULE=on go test -race -cover -count=5 ./...
   - cd v3 && GO111MODULE=on go test -race -cover -count=5 ./...
+  - cd v4 && GO111MODULE=on go test -race -cover -count=5 ./...
