travis script uses absolute paths

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
   - go get golang.org/x/tools/cmd/...
 script:
   - GO111MODULE=on go test -race -cover -count=5 ./...
-  - cd v3 && GO111MODULE=on go test -race -cover -count=5 ./...
-  - cd v4 && GO111MODULE=on go test -race -cover -count=5 ./...
+  - cd $TRAVIS_BUILD_DIR/v3 && GO111MODULE=on go test -race -cover -count=5 ./...
+  - cd $TRAVIS_BUILD_DIR/v4 && GO111MODULE=on go test -race -cover -count=5 ./...
