--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
     - name: Test v2
-      run: GO111MODULE=on go test -race -cover -count=5 ./...
+      run: GO111MODULE=on go test -race -cover -count=5 .
     - name: Test v3
       run: cd ./v3 && GO111MODULE=on go test -race -cover -count=5 ./...
     - name: Test v4
