--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,12 +20,12 @@ jobs:
     name: Build Latest
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.21
+      - name: Set up Go 1.22
         uses: actions/setup-go@v1
         with:
-          go-version: 1.21
+          go-version: 1.22
         id: go
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
       - name: Test v4
-        run: cd ./v4 && GO111MODULE=on go test -race -cover -count=5 ./...
+        run: cd ./v4 && go test -race -cover -count=5 ./...
