--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,11 +19,15 @@ jobs:
   build-latest:
     name: Build Latest
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [ '1.21', '1.22', '1.23' ]
     steps:
       - name: Set up Go 1.23
         uses: actions/setup-go@v1
         with:
-          go-version: 1.23
+          go-version: ${{ matrix.go }}
+          go-version-file: 'v4/go.mod'
         id: go
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
